각 색의 textView 를 누르면 펜의 색이 각 textView 의 background 색으로 바뀌게 수정

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
             android:id="@+id/blue"
             android:onClick="onClick"
             android:layout_marginRight="10dp"
-            android:background="#0091EA"/>
+            android:background="#37AFF8"/>
         <TextView
             android:layout_width="30dp"
             android:layout_height="30dp"
