레이아웃의 버튼, 다이얼로그 속의 글자 등의 폰트를 바꾸고 '펜 굵기' 라는 버튼을 누르면 custom dialog 로 펜의 굵기를 가늘게, 중간, 굵게 를 선택하여 바꿀 수 있고 누른 라디오 버튼을 Toast 메세지로 띄움

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -113,18 +113,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="40dp"
+            android:onClick="onClickThicknessDialog"
+            android:textSize="20dp"
+            android:fontFamily="@font/garam_lotus"
             android:text="펜 굵기" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="40dp"
+            android:textSize="20dp"
+            android:fontFamily="@font/garam_lotus"
             android:text="이미지 저장"
             android:onClick="onClickSave"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:fontFamily="@font/garam_lotus"
             android:text="지우개" />
 
     </LinearLayout>
