'지우개' 버튼 눌렀을 경우에도 dialog_eraser 띄워서 지우게 굵기 선택하여 지울 수 있게 하고 위에 나오는 타이틀바를 지움

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -130,6 +130,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="onClickErase"
             android:textSize="20dp"
             android:fontFamily="@font/garam_lotus"
             android:text="지우개" />
