--- a/app/src/main/res/layout/activity_after_save.xml
+++ b/app/src/main/res/layout/activity_after_save.xml
@@ -6,19 +6,19 @@
     android:layout_height="match_parent"
     android:background="#B2DFDB"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".AfterSaveActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="6"
+        android:gravity="center_horizontal"
         android:orientation="horizontal"
         android:id="@+id/ll1" >
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="60dp"
             android:minWidth="100dp"
             android:minHeight="100dp"
             android:gravity="center"
@@ -29,9 +29,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="저장되었습니다!"
+            android:fontFamily="@font/garam_lotus"
             android:gravity="center"
             android:layout_gravity="center_vertical"
-            android:textSize="30dp" />
+            android:textSize="45dp" />
 
     </LinearLayout>
 
@@ -51,7 +52,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="공유하기"
-            android:textSize="30dp" />
+            android:fontFamily="@font/garam_lotus"
+            android:textSize="40dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -64,11 +66,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
+                android:fontFamily="@font/garam_lotus"
+                android:textSize="20dp"
                 android:text="카카오톡" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/garam_lotus"
+                android:textSize="20dp"
                 android:text="이메일" />
 
         </LinearLayout>
@@ -89,9 +95,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:textSize="20dp"
+            android:fontFamily="@font/garam_lotus"
             android:text="그림판으로"
-            android:onClick="onClickMove"
-            tools:ignore="OnClick" />
+            android:onClick="onClickMove" />
 
     </LinearLayout>
 </LinearLayout>
