--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,82 +9,91 @@
     tools:context=".MainActivity">
 
     <LinearLayout
+        android:id="@+id/ll1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="6"
         android:gravity="center_horizontal|center_vertical"
-        android:orientation="horizontal"
-        android:id="@+id/ll1" >
+        android:orientation="horizontal">
 
         <TextView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
             android:id="@+id/red"
-            android:onClick="onClick"
-            android:layout_marginRight="10dp"
-            android:background="#ff0000"/>
-        <TextView
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginRight="10dp"
+            android:background="#ff0000"
+            android:onClick="onClick" />
+
+        <TextView
             android:id="@+id/orange"
-            android:onClick="onClick"
-            android:layout_marginRight="10dp"
-            android:background="#FFAB40"/>
-        <TextView
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginRight="10dp"
+            android:background="#FFAB40"
+            android:onClick="onClick" />
+
+        <TextView
             android:id="@+id/yellow"
-            android:onClick="onClick"
-            android:layout_marginRight="10dp"
-            android:background="#FFFF00"/>
-        <TextView
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginRight="10dp"
+            android:background="#FFFF00"
+            android:onClick="onClick" />
+
+        <TextView
             android:id="@+id/green"
-            android:onClick="onClick"
-            android:layout_marginRight="10dp"
-            android:background="#64DD17"/>
-        <TextView
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginRight="10dp"
+            android:background="#64DD17"
+            android:onClick="onClick" />
+
+        <TextView
             android:id="@+id/blue"
-            android:onClick="onClick"
-            android:layout_marginRight="10dp"
-            android:background="#37AFF8"/>
-        <TextView
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginRight="10dp"
+            android:background="#37AFF8"
+            android:onClick="onClick" />
+
+        <TextView
             android:id="@+id/indigo"
-            android:onClick="onClick"
-            android:layout_marginRight="10dp"
-            android:background="#304FFE"/>
-        <TextView
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginRight="10dp"
+            android:background="#304FFE"
+            android:onClick="onClick" />
+
+        <TextView
             android:id="@+id/purple"
-            android:onClick="onClick"
-            android:layout_marginRight="10dp"
-            android:background="#5900FF"/>
-        <TextView
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginRight="10dp"
+            android:background="#5900FF"
+            android:onClick="onClick" />
+
+        <TextView
             android:id="@+id/pink"
-            android:onClick="onClick"
-            android:layout_marginRight="10dp"
-            android:background="#FF00BF"/>
-        <TextView
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginRight="10dp"
+            android:background="#FF00BF"
+            android:onClick="onClick" />
+
+        <TextView
             android:id="@+id/white"
-            android:onClick="onClick"
-            android:layout_marginRight="10dp"
-            android:background="#FBF8F8"/>
-        <TextView
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginRight="10dp"
+            android:background="#FBF8F8"
+            android:onClick="onClick" />
+
+        <TextView
             android:id="@+id/black"
-            android:onClick="onClick"
-            android:background="#000000"/>
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="#000000"
+            android:onClick="onClick" />
 
     </LinearLayout>
 
